New leader election example figure

--- a/05-leader_election.tex
+++ b/05-leader_election.tex
@@ -11,7 +11,7 @@ In the beginning of the illustration, on initial system startup, every server is
 
 \begin{figure}[ht!]
 \centering
-\includegraphics[scale = 0.5]{election-example.pdf}
+\includegraphics[scale = 0.5]{election-example}
 \caption{A simple scenario where 5 servers are to obtain consensus by first electing a leader.}
 \label{fig:election_example}
 \end{figure}
