--- a/08-results.tex
+++ b/08-results.tex
@@ -9,4 +9,10 @@ The black box tests, however, were only done for a given set of scenarios in ord
 \subsection{Running the simulator}
 On top of the tests, a simulator that visualizes the implementation was done in order to get illustrative feature to show how Raft solves the consensus problem in presence of faulty servers. The screenshot belows showa run of the simulator.
 
-\subsection{Evaluating the res}
+\subsection{Evaluating of result}
+\begin{figure}[th!]
+\centering
+\includegraphics[scale = 0.5]{screenshot-coming-leader-election}
+\caption{Example run of the simulator in the state where a leader has not yet been elected.}
+\label{fig:my_label}
+\end{figure}
