Updates from ShareLaTeX

--- a/08-results.tex
+++ b/08-results.tex
@@ -34,7 +34,7 @@ And lastly the screenshot in figure~\ref{fig:example3} shows the situation in wh
 \caption{Example run of the simulator where a leader has been elected and request from a the client has been replicated to all correct servers.}
 \label{fig:example3}
 \end{figure}
-These screenshots of the running simulator serves as results of the acceptance tests.
-Furthermore a video of running the program can be seen in the following link:\\ \url{https://www.dropbox.com/s/75kpa65yykld2mv/simulator_run_video.mov?dl=0}.
+These screenshots of a run of the simulator serves as results of the acceptance tests.
+Furthermore a video of running the simulator can be seen in the following link:\\ \url{https://www.dropbox.com/s/75kpa65yykld2mv/simulator_run_video.mov?dl=0}.
 
 The output results of the both the white box and black box test are given in appendix~\ref{sec:results_app}. 
