Work on conclusion

--- a/report.tex
+++ b/report.tex
@@ -35,7 +35,13 @@
 \usepackage{multicol}
 \usepackage{cite}
 \usepackage{graphicx}
+\definecolor{darkgreen}{RGB}{0,127,0}
+\definecolor{darkred}{RGB}{180,0,0}
+\definecolor{mygray2}{gray}{0.9}
+
+
 \usepackage{hyperref}
+\hypersetup{colorlinks=true,citecolor=darkred, urlcolor=darkred}
 \usepackage{url}
 \usepackage{float}
 % ------------------------------------------------------------------------------
