Fix undefined refs and missing end{itemize}

--- a/07-evaluation_testing.tex
+++ b/07-evaluation_testing.tex
@@ -54,6 +54,7 @@ Verifying that our solution actually is an implementation of Raft requires more 
         \item $L$ updates $S$'s log such that it contains $y$ in its log at the correct index and term.
         \end{enumerate}
     \end{enumerate}
+\end{itemize}
 \pagebreak
 An example of a leader election tests looks as following:
 \lstinputlisting[caption=The test for the leader election, language=JavaScript]{code_snippets/blackbox-test-example.js}
