--- a/05-leader_election.tex
+++ b/05-leader_election.tex
@@ -66,7 +66,7 @@ The election timer is implemented by keeping state of the amount of milliseconds
 
 If the election timer reaches zero it will start an election by sending a Remote Producure Call (RPC) request called \emph{RequestVote RPC}, where each server responds whether or not it will grant a vote to the candidate. As the votes are independent to each server they can be sent out in parallel as specified in the Raft paper. Since our implementation is a simulation with objects instead of processes or servers and JavaScript does not have threads, it is not possible to do true parallel computing. But since it is a simulation, we simulate parallel requests with the JavaSript method \verb$setTimeout$, which delays the execution of a given function. To make the simulation more like real requests, they are delayed given by a random amount of milliseconds in a given interval.
 
-This implementation is fine for the implementation, but since we also want to verify the implementation through tests, it is not convenient to make the election random since you cannot assert a random election result. It would be possible to assert a given property such as ``assertion that there is at most one leader after x seconds''. Although this could be a viable test it is not convinient either, since it will make the tests slow and thereby slow down the development flow.
+This implementation is fine for the visualization, but since we also want to verify the implementation through tests, it is not convenient to make the election random since you cannot assert a random election result. It would be possible to assert a given property such as ``assertion that there is at most one leader after x seconds''. Although this could be a viable test it is not convinient either, since it will make the tests slow and thereby slow down the development flow.
 
 In order to easily test the execution of the RequestVoteRPC, we have made a protocol for communicating between servers in Raft. The protocol is an object that delegates a method call to a target and is injectable in the Server object. The delayed implementation explained above is seen in the protocol object \verb$DirectAsync$. The protocol used in testing will call methods directly on the target object and is called \verb$Direct$.
 
