--- a/07-evaluation_testing.tex
+++ b/07-evaluation_testing.tex
@@ -16,6 +16,7 @@ The following code snippet shows the test for the AppendEntries RPC attribute th
 Verifying that our solution actually is an implementation of Raft requires more in-depth tests in the form of validating that we uphold the properties that are argued to provide consensus. This is done by constructing a set of scenarios that reflect the behaviour of the components of Raft: Leader Election, Log Replication, and Safety. The scenarios are as following with success criteria and a simple use case:
 
 \subsubsection{Tests}
+\label{subsub:evaluation_test_tests}
 
 \begin{itemize}
 \item \textbf{Leader Election}:
