--- a/09-discussion.tex
+++ b/09-discussion.tex
@@ -5,7 +5,9 @@ In this section we will look back at the problem introduced in section \ref{sec:
 \subsection{Reflection on goal}
 The goal of this project was to learn about what is the state of the art in terms of solving the consensus problem. In order to do this, our approach was to gain knowledge about Raft through implementing it in a simulated environment.
 The requirements for the implementation stated that it should provide a tool for visualising the behaviour of Raft. \\
-We divided our tests into white- and black box tests in order to document our development process better by testing the behaviour in the white box tests and come with example tests when verifying the solution itself in the black box tests. But the black box tests do not verify the correctness of the implementation, since they do not cover to whole space of possible scenarios. Another way to verify our implementation would have been to use a formal verification tool such as SPIN, which is used for testing models of concurrent systems. But this would require us to develop a whole new solution in another language i.e. Promela which conflicts with our main goal, which was to utilize the flexibility and small over head provided by Javascript. And in terms of the correctness of the implementation of Raft, referring back to the properties for non-Byzantine failure tolerant systems listed in section~\ref{sec:introduction}, the choice of platform again provides a poor basis for a formal verification. But it can be argued that by adopting the behaviour specified in the Raft paper thus also the safety properties, that our implementation upholds to properties of validity and integrity in the cases we have chosen to test.
+We divided our tests into white- and black box tests in order to document our development process better by testing the behaviour in the white box tests and come with example tests when verifying the solution itself in the black box tests. But the black box tests do not verify the correctness of the implementation, since they do not cover to whole space of possible scenarios. Another way to verify our implementation would have been to use a formal verification tool such as SPIN, which is used for testing models of concurrent systems. But this would require us to develop a whole new solution in another language i.e. Promela which conflicts with our main goal, which was to utilize the flexibility and small over head provided by Javascript. 
+
+In terms of the correctness of the implementation of Raft, referring back to the properties for non-Byzantine failure tolerant systems listed in section~\ref{sec:introduction}, the choice of platform again provides a poor basis for a formal verification. But it can be argued that by adopting the behaviour specified in the Raft paper thus also the safety properties, that our implementation upholds to properties of validity and integrity in the cases we have chosen to test.
 
 \subsection{Experiences}
 
@@ -15,30 +17,16 @@ In the situations in parallel we have suggested the method of using a protocol s
 
 \begin{figure}
 \centering
-\includegraphics[scale = 0.5]{figures/replication_race_condition.png}
+\includegraphics[scale = 0.4]{figures/replication_race_condition.png}
 \caption{A situation with possible race condition when idempotent log appends is not implemented. This figure illustrates that some situations are only present when in parallel (or asynchronous).}
 \label{fig:replication_race_condition}
 \end{figure}
 
-\subsection{Further work}
+The random election timer used in leader election in Raft as explained in section~\ref{sub:requestvote_rpc} made it hard to test the leader election. The solution for white box tests was to invoke methods to simulate the random timer. To test the leader election with the random timer we used a delay as explained in section~\ref{subsub:evaluation_test_tests}. One problem with tests as these is that if the tests fail in a given situation is is impossible to replicate the random situation. Another problem is that if the system testing relies on faults in random situation it is not a system you should trust. The last problem is that slow tests slow down the development flow such that every test will be a tradeof of much slower test suites.
+
+\subsection{Future work}
+
 
 % Using random election timeout and trouble with testing.
-One of the problems with using a random election timer is that it is hard to test because of it is not possible to assert a random result. It would be possible to assert a property of the whole system such as ``There is only one leader after x seconds''. But the fact that the test have to be delayed several milliseconds make the tests slow and thereby slows down the development flow.
 
-% - Hvordan gik det?
-% - Hvad var svært?
-% - Hvad kunne vi gøre bedre?
-% - Future improvements?
-
-% Hard to test parallel algorithms
-%   - Raft uses randomized timers -> as explained - hard to test random stuff
-%   - We tried to solve with protocol, but:
-%     - This does not necessarily apply to the resulting parallel implementation
-%     - Name the idempotent thing
-%   - One missing point:
-%     - index should be a part of the log entry
-%       -  we used index in array - not correct
-%
-
-    %Det har været et problem at teste randomness, hvilket har været en udfordring.
 % section discussion (end)
