--- a/00-preface.tex
+++ b/00-preface.tex
@@ -3,8 +3,8 @@
 \section*{Preface} % (fold)
 \label{sec:preface}
 
-This is the report done for the project in the course 02228 Fault-Tolerant Systems of fall 2014. The purpose of the project is to describe and evaluate the fault tolerance of a given system. In our project we have chosen to survey and try to implement a recently proposed solution to the consensus problem in distributed systems - Raft.
-Our approach to this, is to implemented a tool that applies Raft to a simulated distributed network and from this, derive a higher knowledge of the algorithm and it's ways of providing fault tolerance. The problem about consensus will be presented after which Raft will be described in this context. The design and implementation will follow t with notes on our experience through each step of the development.
+This is the report done for the project in the course 02228 Fault-Tolerant Systems of fall 2014. The purpose of the project is to describe and evaluate the fault tolerance of a given system. In our project we have chosen to survey and implement a recently proposed solution to the consensus problem within distributed systems - Raft.
+Our approach to this is to implemented a tool that applies Raft to a simulated distributed network and from this derive describe how the algorithm works and it's ways of providing fault tolerance. The problem about consensus will be presented after which Raft will be described in this context. The design and implementation will follow with a discussion on our experience through each step of the development.s
 A conclusion will then summarize our result and experiences.
 
 % section preface (end)
