--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -3,9 +3,9 @@
 \section{Introduction} % (fold)
 \label{sec:introduction}
 
-This the final report for a project in the course ``Fault tolerant systems'' 02228. The purpose of this report is to document our experience implementing a consensus algorithm i.e. Raft. Our approach to this is to take the basic description of Raft and iteratively construct a test for each behaviour the algorithm should have and implement its functionality that satisfies the given test.\\
+This is the final report for the project in the course ``Fault tolerant systems'' (02228). The purpose of this project is to document our experience in implementing Raft - a consensus algorithm. Our approach to this is use the specification of the Raft paper~\cite[p.~4]{Raft} and iteratively construct a test for each behaviour the algorithm should have and implement its functionality that satisfies the given test.
 
-The fundamental problem, when talking about consensus in a distributed system, will be presented at start. This will then show the motivation behind the project itself. And, as many solutions to this problem already exists, it should also be discussed why Raft in particular is relevant in the context of this project.
+IN this introductory section we will present he fundamental problem when talking about consensus in a distributed system with a basic description of the Raft algorithm.
 
 \subsection{Problem}
 Reaching consensus in a distributed system means that all or at least the majority of processes in the network agree on some value or state of the entire system. This is often needed when processes might be faulty thus bringing reliability and availability at stake on single-point-of-failure. Upholding these properties in a given distributed system then relies on the architecture utilised and hardware implemented in the processes.\\ A simple solution to this could be to initiate a vote among all correct processes on to what the value is, in which the value is the result of the majority vote. The figure \ref{consensus} below illustrates an example of a distributed system consisting of a number of notes. The value \textit{x} is what the system must agree upon. Though here we have faulty process \textit{P1}, which is responsible to give back the result. Taking the fact of connectivity of system aside, the system will become unavailable because of the now faulty process. \\
