Change the defintion of consensus to eventually agree instead of majority

--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -8,7 +8,7 @@ This is the final report for the project in the course ``Fault tolerant systems'
 IN this introductory section we will present he fundamental problem when talking about consensus in a distributed system with a basic description of the Raft algorithm.
 
 \subsection{Problem}
-Reaching consensus in a distributed system means that all or at least the majority of processes in the network agree on some value or state of the entire system. This is often needed when processes might be faulty thus bringing reliability and availability at stake on single-point-of-failure. Upholding these properties in a given distributed system then relies on the architecture utilised and hardware implemented in the processes.\\ A simple solution to this could be to initiate a vote among all correct processes on to what the value is, in which the value is the result of the majority vote. The figure \ref{consensus} below illustrates an example of a distributed system consisting of a number of notes. The value \textit{x} is what the system must agree upon. Though here we have faulty process \textit{P1}, which is responsible to give back the result. Taking the fact of connectivity of system aside, the system will become unavailable because of the now faulty process. \\
+Reaching consensus in a distributed system means that all processes in the network eventually agree on some value or state of the entire system. This is often needed when processes might be faulty thus bringing reliability and availability at stake on single-point-of-failure. Upholding these properties in a given distributed system then relies on the architecture utilised and hardware implemented in the processes.\\ A simple solution to this could be to initiate a vote among all correct processes on to what the value is, in which the value is the result of the majority vote. The figure \ref{consensus} below illustrates an example of a distributed system consisting of a number of notes. The value \textit{x} is what the system must agree upon. Though here we have faulty process \textit{P1}, which is responsible to give back the result. Taking the fact of connectivity of system aside, the system will become unavailable because of the now faulty process. \\
 
 % What is 'this' in ... the system will suffer from this...
 
