--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -19,16 +19,17 @@ A simple solution to this could be to initiate a vote among all correct processe
 	\label{consensus}
 \end{figure}
 
-The fundamental problem behind this is that you cannot rely on the individual processes to be reliable and thus solely store the value. This boils down to a well-known problem - The Two Generals Problem.
+The fundamental problem behind this is that you cannot rely on the individual processes to be reliable and thus solely store the value. The system needs more This boils down to a well-known problem - The Two Generals Problem.
 
 % Måske burde the two generals problem komme her?
 
 % Enig, har sat det ind her i stedet for.
 
-\subsection{Motivation}
-The elements of the problem presented serve as motivation behind consensus in a system of unreliable components. Because how do you know for certain what a value is, when you for sure know that some components must be faulty at some point?
+\subsection{Motivation: Two Generals Problem} % (fold)
+\label{sub:motivation_two_generals_problem}
 
-\subsubsection{The Two Generals Problem}
+The elements of the problem presented serve as motivation behind consensus in a system of unreliable components. Because how do you rely on a value in a system, where some components will eventually be faulty?
+
 The basic problem of reaching consensus in a distributed network can be illustrated by the Two Generals Problem analogy.
 
 \begin{figure}[h]
@@ -38,9 +39,10 @@ The basic problem of reaching consensus in a distributed network can be illustra
 	\label{generals}
 \end{figure}
 
-In the figure\ref{generals} below we see two generals of the same army who want to attack an enemy army. But they have to attack at the same time in order to win. They cannot communicate directly to each other since they are at different fronts of the battlefield i.e. in their own camps. In the context of a distributed system, the generals here can be seen as two processes trying to agree on a value.
-General 1 then sends out a messenger to tell the second general, that they should attack at dawn. The second general then receives this message, but the first general cannot be sure of this (the messenger might be captured or killed by the enemy on his way to the second general and vice versa). Again, in the context of distributed system, the unreliability of messenger can directly related back to the unreliability of message transmission in a normal distributed system. In terms of Byzantine failure, this can be illustrated by the messenger being captured by the enemy and turned to spy on the generals i.e. given false information.
-So the second general sends the messenger back in order to acknowledge this. But the first general also has to acknowledge this, resulting in a never ending run for the poor messenger - thus the generals can never agree on when to attack the enemy.
+In figure~\ref{generals} is an illustration of two generals from the same army who want to attack an enemy army and they have to attack at the same time in order to win. They cannot communicate directly to each other since they are at different fronts of the battlefield. In the context of a distributed system the generals here can be seen as two processes trying to agree on a value.
+General 1 sends out a messenger to tell the second general that they should attack at dawn. The second general then receives this message, but the first general cannot be sure of this (the messenger might be captured or killed by the enemy on his way to the second general and vice versa). Again, in the context of distributed system, the unreliability of messenger can directly related back to the unreliability of message transmission in a normal distributed system.
+
+Now the second general sends the messenger back in order to acknowledge this, but the first general also has to acknowledge this, resulting in a never ending run for the poor messenger - thus the generals can never agree on when to attack the enemy.
 
 \subsubsection{Properties of distributed consensus}
 When want to define consensus, the goal is to satisfy a set of requirements i.e. properties that the distributed system must uphold. These are used to describe the systems fault tolerant features related to faulty processes. A faulty process can either fail by crashing or experience a Byzantine failure. Such a failure in the context of distributes system occur when e.g. a process for some reason transmits incorrect or malicious data throughout the network. Due to the arbitrary results of these kinds of failures, properties of a system are often distinguished by either tolerating them or not. A main difference in terms of properties of a system whether it tolerates Byzantine failures or not, is the validity and integrity. The integrity property for a system that does not tolerate Byzantine failures is as following\cite{DistributedSystems}.
@@ -60,5 +62,9 @@ When want to define consensus, the goal is to satisfy a set of requirements i.e.
 
 The clearest commonality here, is that you should always be able to say that all correct processes must be able to decide on the same value or state, as mentioned earlier. Though the main difference is that with Byzantine processes, you must be able to say if they are all correct before stating they can derive the same value. This fact differentiates many solutions to this problem, depending on which property set they can satisfy. \\
 Also, as discussed in \cite{Raft} a consensus algorithm for a non-Byzantine system has the following properties: safety, availability, timing interdependency, and majority vote on procedure calls. The safety property can be directly related back to our validity and integrity properties, as the system's safety and availability is measured be the correctness of return result upon a request.
+
+Byzantine failure can be related two the two generals problem in terms of the messenger being captured by the enemy and turned to spy on the generals i.e. given false information.
+
+% subsection motivation_two_generals_problem (end)
 
 % section introduction (end)
