Small correction to requirements

--- a/03-requirements.tex
+++ b/03-requirements.tex
@@ -1,6 +1,6 @@
 \section{Requirements} % (fold)
 \label{sec:requirements}
-The tool we are implementing should serve as an illustration tool, to show how the Raft algorithm works for given scenarios of faulty processes in a distributed system.
+The tool we are implementing should serve as an illustration tool to show how the Raft algorithm works for given scenarios of faulty processes in a distributed system.
 The requirements are split into two different aspects i.e. functional and quality attributes:
 \subsection{Functional requirements}
 The end product must satisfy the following functional requirements given the MoSCoW method:
