--- a/04-analysis.tex
+++ b/04-analysis.tex
@@ -10,7 +10,7 @@ The application of consensus algorithms such as Raft is many, but the most gener
 
 Raft have already been implemented in several versions and in many languages. Diego Ongaro himself has implemented Raft in C++ (LogCabin\footnote{https://github.com/logcabin/logcabin}), CoreOS\footnote{A new Linux operation system fork made for server deployments.} uses etcd\footnote{https://github.com/coreos/etcd}, which is a Raft implementation in Go used for service discovery.
 
-If a Raft implementation was needed for real usage, the solution would have been to extend some of the rich open source implementations already available in solid languages as Go and C. But as mentioned in the introduction, the scope of this project is to learn about Raft with relation to fault-tolerance by implementing it. To be able to cover as much of Raft as possible in the time scope, that language chosen for implementation is JavaScript, because it would allow more productivity.
+If a Raft implementation was needed for real usage, the solution would have been to extend some of the rich open source implementations already available in solid languages as Go and C. But as mentioned in the introduction, the scope of this project is to learn about Raft with relation to fault-tolerance by implementing it. To be able to cover as much of Raft as possible in the time scope, the language chosen for implementation is JavaScript, because it would allow more productivity.
 
 There already exists solutions in JavaSciript, but since one of the focus of this project is to learn about Raft and the consensus problem, we have chosen to implement a new version with our own approach. Already existsing solutions in JavaScript such as \href{https://github.com/ongardie/raftscope}{raftscope} and \href{https://github.com/pgte/skiff-algorithm}{skiff} have worked as inspirations during implementation.
 
@@ -28,7 +28,7 @@ In order to achieve robustness the implementation will also be white-box tested 
 \subsection{Development Approach}
 \label{sub:development_approach}
 
-Our development approach on implementing Raft has iterative with relation to the process. The Raft paper includes an informal specification~\cite[page~4]{Raft} with behaviour of the servers described by the state they are in or how to respond to requests. In order to have a more common language between the specification and the tests, the development approach Behaviour Driven Development (BDD)\footnote{Originally described by Dan North in the blog post \url{http://dannorth.net/introducing-bdd/}}~\cite{bddpaper}. The Behaviour Driven approach is iterative and have been used in the report with the following steps:
+The Raft paper includes an informal specification~\cite[page~4]{Raft} with behaviour of the servers described by the state they are in or how to respond to requests. In order to have a more common language between the specification and the tests, the development approach Behaviour Driven Development (BDD) was chosen\footnote{Originally described by Dan North in the blog post \url{http://dannorth.net/introducing-bdd/}}~\cite{bddpaper}. The Behaviour Driven approach is iterative and have been used in the report with the following steps:
 
 \begin{enumerate}
     \item Derive behaviour from the specification and write a failing test of the given behaviour.
